--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "i18next": "^25.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.542.0",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "next": "15.5.2",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.3.5",
+    "pannellum": "^2.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0"
@@ -40,6 +44,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/pannellum": "^2.5.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
